[package]
name = "fft-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["algorithms", "mathematics"]
keywords = ["math"]
repository = "https://github.com/BastianAsmussen/fft-rs"
description = "An implementation of the Fast Fourier Transform algorithm."

[dependencies]
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"

[[bench]]
name = "fft"
harness = false
